--- a/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html
@@ -279,7 +279,7 @@
 
    <div class="mwstitle section">
 <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA account help</p>
-<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">Set up your business in Represent a Client</h1>
+<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">Set up your business to use Represent a Client</h1>
 </div>
 <!--<p>Learn how to set up your business in Represent a Client (RAC) and to associate employees to it.</p>-->
 		    <p>After you have signed in to your Represent a Client (RAC) account, you can register your business and associate employees to it. This will enable you to manage the access of employees to your client's information. Clients can authorize a business as an authorized representative, and only the employees associated to the business can access client information.</p>
@@ -290,9 +290,9 @@
     <h3>On this page</h3>
     <ul>
       <li><a href="#section1">Register your business in Represent a Client (RAC)</a>
-	    <li><a href="#section2">Manage employee access</a></li>
-      <li><a href="#section3">Employee roles and their access</a>
-	      
+	   
+      <li><a href="#section2">Employee roles and their access</a>
+	  <li><a href="#section3">Manage employee access</a></li>     
     </ul>
 <h2 id="section1">Register your business in Represent a Client (RAC)</h2>
 	<p>You can register your business in RAC using your business number (BN) if <strong>all</strong> of the following criteria are met:</p>
@@ -331,40 +331,9 @@
 	<!--<p>Before you can register the business with RAC, you must <a href="https://www.canada.ca/en/services/taxes/business-number.html">register your business with the CRA</a>.</p>-->
 	<!--<p>Learn more: <a href="https://www.canada.ca/en/services/taxes/business-number.html">Business number registration page</a></p>-->
 
-	<h2 id="section2">Manage employee access</h2>
-	    <h3>Create BN Groups</h3>
-	<p>Any individual client that has authorized a business can be assigned to a BN Group. Employees must then be associated to that group to access the information of those clients.<!--Only business owners, senior administrators, and employees associated to a group will be permitted to access the information of individual clients assigned to that group.--></p>
- <ol class="">
-        <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
-        <li>Select <strong>Review and update</strong></li>
-        <li>Select the business name you wish to manage</li>
-<li>In the <strong>Business information</strong> tab, select <strong>Create a group</strong></li>
-	 <li>Enter and confirm group information</li></ol>
-	
-      <h3>Associate employees to your business or BN Group</h3>
-	<p>Your employees must register for a RepID through the <strong>Register yourself</strong> link on the Represent a Client welcome page. When they give you their RepID, you can associate your employees to your business or BN Group to allow them access to your client's information.</p>
-    <ol class="">
-        <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
-        <li>Select <strong>Review and update</strong></li>
-        <li>Select the business name or BN group you wish to manage</li>
-      <li>In the <strong>Manage employees' access</strong> tab, select <strong>Associate employees</strong></li>
-      <li>Select a role for the employee and enter their RepID
-   <br>You can also assign privileges to individual employees regardless of their role</li>
-      </ol>
-
-	<h3>Assign taxpayers to your BN Group</h3>
-	<p>Only business owners<!--, senior administrators,--> and employees associated to a BN Group will be permitted to access the information of clients assigned to that group.</p>
-       <ol class="">
-	       <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
-        <li>Select <strong>Review and update</strong></li>
-        <li>Select the BN Group you wish to manage</li>
-      <li>In the <strong>Manage clients</strong> tab, select <strong>Assign taxpayers</strong></li>
-       <li>Enter taxpayer SINs or business numbers</li></ol>
-  </ol>
-<!--<p>You can use one or more junior or senior administrators to associate and manage employees. </p>-->
 	
 	
-	<h2 id="section3">Employee roles and their access</h2>
+	<h2 id="section2">Employee roles and their access</h2>
 	<p>You can assign various roles to your employees to manage their access and responsibilities. Refer to the table below to understand the functions available to each role.</p>
 <!--<p>You can use one or more junior or senior administrators to associate and manage employees. You can also manage your employees’ access using the junior and senior representative functions. Refer to the table below to understand the functions available to each role.</p>-->
 </div>
@@ -898,7 +867,38 @@
 
 	    </div>    </div> </section>
 </div>-->
+<h2 id="section3">Manage employee access</h2>
+	    <h3>Create BN Groups</h3>
+	<p>Any individual client that has authorized a business can be assigned to a BN Group. Employees must then be associated to that group to access the information of those clients.<!--Only business owners, senior administrators, and employees associated to a group will be permitted to access the information of individual clients assigned to that group.--></p>
+ <ol class="">
+        <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
+        <li>Select <strong>Review and update</strong></li>
+        <li>Select the business name you wish to manage</li>
+<li>In the <strong>Business information</strong> tab, select <strong>Create a group</strong></li>
+	 <li>Enter and confirm group information</li></ol>
+	
+      <h3>Associate employees to your business or BN Group</h3>
+	<p>Your employees must register for a RepID through the <strong>Register yourself</strong> link on the Represent a Client welcome page. When they give you their RepID, you can associate your employees to your business or BN Group to allow them access to your client's information.</p>
+    <ol class="">
+        <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
+        <li>Select <strong>Review and update</strong></li>
+        <li>Select the business name or BN group you wish to manage</li>
+      <li>In the <strong>Manage employees' access</strong> tab, select <strong>Associate employees</strong></li>
+      <li>Select a role for the employee and enter their RepID
+   <br>You can also assign privileges to individual employees regardless of their role</li>
+      </ol>
 
+	<h3>Assign taxpayers to your BN Group</h3>
+	<p>Only business owners<!--, senior administrators,--> and employees associated to a BN Group will be permitted to access the information of clients assigned to that group.</p>
+       <ol class="">
+	       <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
+        <li>Select <strong>Review and update</strong></li>
+        <li>Select the BN Group you wish to manage</li>
+      <li>In the <strong>Manage clients</strong> tab, select <strong>Assign taxpayers</strong></li>
+       <li>Enter taxpayer SINs or business numbers</li></ol>
+  </ol>
+<!--<p>You can use one or more junior or senior administrators to associate and manage employees. </p>-->
+	
 
 
             <section class="pagedetails">
