--- a/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html
@@ -815,21 +815,22 @@
 <div class="mwsbodytext text parbase section">
     
 <h4>Assigning privileges</h4>
-    <p>You can assign certain privileges to employees that will allow them to perform various tasks. They can be assigned to an employee in any role. Where these privileges are assigned to an employee, they will have the ability to perform all of the permissions grouped under that privilege.</p>
+    <p>You can assign certain privileges to employees that will allow them to perform various tasks. They can be assigned to an employee that doesn't already have them. Where these privileges are assigned to an employee, they will have the ability to perform all of the permissions grouped under that privilege.</p>
 	
-         <details><summary>View and delete business clients privilege</summary> <p>The <strong>View and delete business clients</strong> privilege groups these 3 permissions:</p>  <ul> 
- <li>View business client list</li> 
-  
- <li>Delete Authorizations</li> 
-		 <li>View business transactions (Jr. admins have this ability by default)</li>
-</ul> </details>  
-		 <details><summary>View and delete individual clients privilege</summary>  <p>The<strong> View and delete individual clients</strong> privilege groups these 4 permissions:</p>  <ul> 
+	<details><summary>View and delete individual clients</summary>  <p>The<strong> View and delete individual clients</strong> privilege groups these 4 permissions:</p>  <ul> 
  <li>View individual client list</li> 
  <li>Delete Authorizations</li> 
 			 <li>View individual transactions (Jr. admins have this ability by default)</li>
 			 <li>View list of notices issued </li>
 </ul> </details> 
-	<details><summary>View and delete trust clients privilege</summary>
+         <details><summary>View and delete business clients</summary> <p>The <strong>View and delete business clients</strong> privilege groups these 3 permissions:</p>  <ul> 
+ <li>View business client list</li> 
+  
+ <li>Delete Authorizations</li> 
+		 <li>View business transactions (Jr. admins have this ability by default)</li>
+</ul> </details>  
+		 
+	<details><summary>View and delete trust clients</summary>
 		<p>The<strong> View and delete trust clients</strong> privilege groups these 3 permissions:</p>
 		<ul>
 		 <li>View trust client list</li> 
@@ -837,7 +838,7 @@
  <li>Delete Authorizations</li> 
 		 <li>View trust transactions (Jr. admins have this ability by default)</li>	
 		</ul></details>
-	<details><summary>Manage access mail privilege</summary><p>View pre-assessment review and processing review letters that have been electronically delivered.</p>
+	<details><summary>Manage access mail</summary><p>View pre-assessment review and processing review letters that have been electronically delivered.</p>
 		
 	</details>
 
