--- a/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html
@@ -314,7 +314,7 @@
       <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted">This is your first time signing in to RAC<span class="wb-inv">: Option 1</span></h4>
         <ol class=""><li>Select <strong>Register your business</strong> from the welcome screen and follow the instructions provided
-		 <p class="mrgn-tp-md">You will also receive a <strong>RepID</strong> you can give it to any client who wants to authorize only you as their representative</p></li></ol>
+		 <p class="mrgn-tp-md">You will also receive a <strong>RepID</strong> you can give to any client who wants to authorize only you as their representative</p></li></ol>
 
       </li>
       <li class="cnjnctn-col">
@@ -522,10 +522,10 @@
  <tr class="fltrTr">
         <td><p class="text-left">View and download list of clients for the business</p></td>
         <td><ul class="list-unstyled text-left lst-spcd">
-          <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>With "View and delete individuals clients" privilege</li>
-          <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>With "View and delete individuals clients" privilege</li>
+          <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>With "Manage clients" privilege</li>
+          <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>With "Manage clients" privilege</li>
           <li class="lvl-lr-toggle grouped">
-              <strong>Junior admin: </strong>With "View and delete individuals clients" privilege</li>
+              <strong>Junior admin: </strong>With "Manage clients" privilege</li>
 		<li class="lvl-sa-toggle grouped">
               <strong>Senior admin: </strong>Allowed</li>
 		<li class="lvl-o-toggle grouped">
@@ -574,10 +574,10 @@
 	    <tr class="fltrTr">
         <td><p class="text-left">Authorization request</p></td>
         <td><ul class="list-unstyled text-left lst-spcd">
-          <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>With "View and delete business clients" privilege</li>
-          <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>With "View and delete business clients" privilege</li>
+          <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>Allowed</li>
+          <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>Allowed</li>
           <li class="lvl-lr-toggle grouped">
-              <strong>Junior admin: </strong>With "View and delete business clients" privilege</li>
+              <strong>Junior admin: </strong>Allowed</li>
 		<li class="lvl-sa-toggle grouped">
               <strong>Senior admin: </strong>Allowed</li>
 		<li class="lvl-o-toggle grouped">
@@ -587,10 +587,10 @@
 	    <tr class="fltrTr">
         <td><p class="text-left">Delete Authorization</p></td>
         <td><ul class="list-unstyled text-left lst-spcd">
-          <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>With "View and delete individual clients" privilege</li>
-          <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>With "View and delete individual clients" privilege</li>
+          <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>With "Manage clients" privilege</li>
+          <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>With "Manage clients" privilege</li>
           <li class="lvl-lr-toggle grouped">
-              <strong>Junior admin: </strong>With "View and delete individual clients" privilege</li>
+              <strong>Junior admin: </strong>With "Manage clients" privilege</li>
 		<li class="lvl-sa-toggle grouped">
               <strong>Senior admin: </strong>Allowed</li>
 		<li class="lvl-o-toggle grouped">
@@ -598,7 +598,7 @@
             </td>
       </tr>
 <tr class="fltrTr">
-        <td><p class="text-left">Manage online mail</p></td>
+        <td><p class="text-left">Manage online mail (for registration)</p></td>
         <td><ul class="list-unstyled text-left lst-spcd">
           <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>No access</li>
           <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>No access</li>
@@ -813,7 +813,7 @@
 
 </div>-->
 <div class="mwsbodytext text parbase section">
-    
+    <p>An additional role, <strong>Jr. Rep Ltd</strong>, can only submit authorization requests for a business. It serves no other purpose, and privileges can not be assigned to it.</p>
 <h4>Assigning privileges</h4>
     <p>You can assign certain privileges to employees that will allow them to perform various tasks. They can be assigned to an employee that doesn't already have them. Where these privileges are assigned to an employee, they will have the ability to perform all of the permissions grouped under that privilege.</p>
 	
@@ -886,7 +886,7 @@
         <li>Select the business name or BN group you wish to manage</li>
       <li>In the <strong>Manage employees' access</strong> tab, select <strong>Associate employees</strong></li>
       <li>Select a role for the employee and enter their RepID
-   <br>You can also assign privileges to individual employees regardless of their role</li>
+   <br>You can also assign additional privileges to individual employees who don't already have them</li>
       </ol>
 
 	<h3>Assign taxpayers to your BN Group</h3>
