--- a/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>GroupID set-up in Represent a Client - Canada.ca</title>
+<title>Create and manage a GroupID in Represent a Client - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
@@ -279,7 +279,7 @@
 
    <div class="mwstitle section">
 <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA account help</p>
-<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">Set up a GroupID in Represent a Client</h1>
+<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">Create and manage a GroupID in Represent a Client</h1>
 </div>
 <!--<p>Learn how to set up GroupID and associate representatives to it.</p>-->
 		    <p>Any representative with a Represent a Client (RAC) account can create a group that will be identified by a unique GroupID. Taxpayers can then authorize the GroupID. Representatives must be associated to that GroupID to access the information of those taxpayers.</p>
@@ -301,9 +301,9 @@
 <h2 id="section1">Benefits of using a GroupID</h2>
 <p>When you create a GroupID, you can:</p>
 	<ul>
-		<li>Facilitate the management of employees; new authorization forms are not required when a new employee joins the organization</li>
+		<li>Facilitate the management of representatives; new authorization forms are not required when a new representative joins the organization</li>
 		<li>Delegate managing the group to an administrator</li>
-		<li>Promote transparency since group administrators are able to view the transactions performed on business accounts by representatives assigned to the group</li>
+		<li>Promote transparency since group administrators are able to view the transactions performed on client accounts by representatives assigned to the group</li>
 	</ul>
 
 	
@@ -445,13 +445,13 @@
       <tr class="fltrTr">
           <td><p class="text-left">Delete authorization</p></td>
         <td><ul class="list-unstyled text-left lst-spcd">
-            <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>With <strong>View and delete clients</strong>privilege</li>
-            <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>With privilege</li>
-            <li class="lvl-lr-toggle grouped"> <strong>Group admin: </strong>Allowedr</li>
+            <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>With <strong>View and delete clients</strong> privilege</li>
+            <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>With <strong>View and delete clients</strong> privilege</li>
+            <li class="lvl-lr-toggle grouped"> <strong>Group admin: </strong>Allowed</li>
           </ul></td>
       </tr>
       <tr class="fltrTr">
-          <td><p class="text-left">Manage online mail</p></td>
+          <td><p class="text-left">Manage online mail (for registration)</p></td>
         <td><ul class="list-unstyled text-left lst-spcd">
             <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>No access</li>
             <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>No access</li>
