--- a/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html
@@ -815,7 +815,7 @@
 <div class="mwsbodytext text parbase section">
     <p>An additional role, <strong>Jr. Rep Ltd</strong>, can only submit authorization requests for a business. It serves no other purpose, and privileges can not be assigned to it.</p>
 <h4>Assigning privileges</h4>
-    <p>You can assign certain privileges to employees that will allow them to perform various tasks. They can be assigned to an employee that doesn't already have them. Where these privileges are assigned to an employee, they will have the ability to perform all of the permissions grouped under that privilege.</p>
+    <p>You can assign certain privileges to employees that will allow them to perform various tasks. They can be assigned to an employee who doesn't already have them. Where these privileges are assigned to an employee, they will have the ability to perform all of the permissions grouped under that privilege.</p>
 	
 	<details><summary>View and delete individual clients</summary>  <p>The<strong> View and delete individual clients</strong> privilege groups these 4 permissions:</p>  <ul> 
  <li>View individual client list</li> 
