--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-address.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-address.html
@@ -129,7 +129,7 @@
     <li>Select <strong>Edit</strong></li>
   </ol>
 </details> -->
-<h2 class=h4>If you can't access your account</h2>
+<h2 class=h4>If you can't sign in to your account</h2>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
 	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 	<!--<details><summary class="max-content">Make a change for someone else</summary>	-->
@@ -294,7 +294,11 @@
 </ul>
 			<div class="clearfix">&nbsp;</div>
 			<!--<p><span class="far fa-clock"></span><strong> Processing time:</strong> Approximately 8 weeks after receiving your <strong>paper return</strong></p><!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>
-			<p>You can change your personal information, including your address, by writing it on your paper tax return or, if you are filing electronically through a tax preparer or authorized service provider, using EFILE. You <strong>cannot</strong> change your address if using NETFILE to file your return.</p>
+			<p>You can change your address when filing your return using one of the following methods:
+				<ul>
+					<li>On your paper tax return</li>
+					<li>Filing electronically through a tax preparer or authorized service provider using EFILE</li></ul>
+				<p>You <strong>cannot</strong> change your address if using NETFILE to file your return.</p>
 			<p>However, you should not wait for tax filing season to update your information. In some cases, identification changes could have a direct impact on your eligibility for benefits.</p>
 <!--<p>Because using a tax return to update information will take longer, it is better to update your information using one of the other methods.</p>-->
 </div>
