--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
@@ -310,7 +310,8 @@
 </ul>
 			<div class="clearfix">&nbsp;</div>			
 			<!--<p>You can change your personal information, including your phone number, by writing it on your paper tax return or if you are filing electronically through a tax preparer or authorized service provider using EFILE. You <strong>cannot</strong> change it using certified tax software.</p>-->
-			<p>A phone number can be updated through certified tax software. This includes the 2D Barcode return printed from the software, as well as through NETFILE. The home telephone number can be updated through all methods of filing a tax return.
+			<p>A home telephone number can be updated on your tax return when you file using any method.</p>
+			<p>For any other type of phone number, you must make the change another way (online, by phone or by mail).</p>
 			<p>However, you should not wait for tax filing season to update your information. In some cases, identification changes could have a direct impact on your eligibility for benefits.</p>
 <!--<p>Because using a tax return to update information will take longer, it is better to update your information using one of the other methods.</p>-->
 </div>
