--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html
@@ -269,7 +269,12 @@
 
 </ul>
 			<div class="clearfix">&nbsp;</div>			
-			<p>You can change your personal information, including your email address, by writing it on your paper tax return, filing electronically through a tax preparer or authorized service provider using EFILE, or using certified tax software. <!--You can <strong>not</strong> update it using NETFILE.--></p>
+			<p>You can change your your email address when filing your return using one of the following methods:
+				<ul>
+					<li>On your paper tax return</li>
+					<li>Filing electronically using NETFILE</li>
+					<li>Filing electronically through a tax preparer or authorized service provider using EFILE</li></ul>
+				
 			<p>However, you should not wait for tax filing season to update your information. In some cases, identification changes could have a direct impact on your eligibility for benefits.</p>
 
 </div>
