--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
@@ -188,7 +188,7 @@
 			
 		</details>
 		<details id="details-panel2" class="provisional wb-details-close">
-            <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
+            <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
 					<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 
 		 <p>You must provide documentation if you have already changed your name.</p> 
