--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html
@@ -62,7 +62,7 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/individual-payments/make-payment.html">Make a payment to the CRA</a></li>
 
 </ul><div class="clearfix">&nbsp;</div>
-	    <p>With direct deposit, you receive your tax refunds and benefit payments faster and securely, directly in your account at a Canadian financial institution. In the event of an emergency or unforeseen circumstance, using direct deposit will ensure you continue to get your payments on time.</p>
+	    <p>With direct deposit, you receive your tax refunds and benefit payments faster and securely, directly in your account at a Canadian bank or credit union. In the event of an emergency or unforeseen circumstance, using direct deposit will ensure you continue to get your payments on time.</p>
 <!--<p>Sign up for direct deposit or update your information with your bank account information, which is on your personal cheques or online banking portal. If you can't find the information, contact your financial institution.</p>-->
 	  <!--    	   <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>-->
 
@@ -78,14 +78,14 @@
                     </div>
 				 <div class="col-lg-4 col-md-6">
                         <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html">Businesses</a></h3>
-                        <p>Update your direct deposit information online or with your Canadian financial institution</p>
+                        <p>Update your direct deposit information online or with your Canadian bank or credit union</p>
                     </div> 
 			      <div class="col-lg-4 col-md-6">
                         <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html">Trusts</a></h3>
                         <p>Update your direct deposit information online or by mailing in a form</p>
                     </div>
 			     	 <div class="col-lg-4 col-md-6">
-                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-non-residents.html">Non-residents</a></h3>
+                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-non-residents.html">Non-resident individuals, businesses and trusts</a></h3>
                         <p>Find the forms to sign up for or change your direct deposit information</p>
                     </div>
 	
