--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
@@ -97,8 +97,8 @@
 <div class="clearfix">&nbsp;</div> 
 
 	 <!--   <p>With direct deposit, you receive your tax refunds and benefit payments faster and securely, directly in your account at a Canadian financial institution. In the event of an emergency or unforeseen circumstance, using direct deposit will ensure you continue to get your payments on time.</p>-->
-	 <p>If you have a Canadian bank account, sign up for direct deposit to receive certain payments from the CRA, such as:</p>
-                <ul>
+	 <p>If you have a Canadian bank account, sign up for direct deposit to receive your payments from the CRA.</p>
+             <!--   <ul>
                     <li>Income tax refund</li>
                     <li>GST/HST credit and any similar provincial and territorial payments</li>
                     <li>Canada child benefit and any similar provincial and territorial payments</li>
@@ -106,7 +106,7 @@
                     <li>Deemed overpayment of tax</li>
                     <li>Disability tax credit</li>
 			<li>Canada Carbon Rebate</li>
-                </ul>	  
+                </ul>	  -->
 	   <p>You will need to <a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit/help-centre.html#a1a">find your banking information</a> at the bottom of your personal cheques or in your online banking portal. If you can't find the information, contact your financial institution.</p>
 
 	   
@@ -139,13 +139,13 @@
 		</details>
 		
 		<details id="details-panel2" class="provisional wb-details-close">
-        <summary><span class="fas fa-university mrgn-rght-sm"></span>Through your Canadian financial institution</summary>
+        <summary><span class="fas fa-university mrgn-rght-sm"></span>Through your Canadian bank or credit union</summary>
 <!--<p><span class="far fa-clock"></span> <strong>Processing time:</strong> The following business day</p>-->
 	   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
-  <p>You can sign up for direct deposit or change your account information through many Canadian banks, credit unions, and trust companies. Visit your financial institution's website for information on how to sign up.</p>
+  <p>You can sign up for direct deposit or change your account information through many Canadian banks, credit unions, and trust companies. Once you provide consent through one of these financial institutions, your CRA direct deposit information will be updated. Visit your financial institution's website for information on how to sign up.</p>
                 <details id="dd-fi-individuals" class="mrgn-bttm-md">
-                    <summary>Choose your Canadian financial institution</summary>
+                    <summary>Choose your Canadian bank or credit union</summary>
 							<!--   <p>Once you provide consent through one of these financial institutions, your CRA direct deposit information will be updated the following business day.</p>-->
 
                     <div class="wb-filter mrgn-tp-md" id="dd-individuals">
