--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
@@ -97,7 +97,7 @@
 <div class="clearfix">&nbsp;</div> 
 
 	 <!--   <p>With direct deposit, you receive your tax refunds and benefit payments faster and securely, directly in your account at a Canadian financial institution. In the event of an emergency or unforeseen circumstance, using direct deposit will ensure you continue to get your payments on time.</p>-->
-	 <p>If you have a Canadian bank account, sign up for direct deposit to receive your payments from the CRA.</p>
+	 <p>If you have a Canadian bank account, you can sign up for direct deposit to receive your payments from the CRA.</p>
              <!--   <ul>
                     <li>Income tax refund</li>
                     <li>GST/HST credit and any similar provincial and territorial payments</li>
@@ -107,7 +107,7 @@
                     <li>Disability tax credit</li>
 			<li>Canada Carbon Rebate</li>
                 </ul>	  -->
-	   <p>You will need to <a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit/help-centre.html#a1a">find your banking information</a> at the bottom of your personal cheques or in your online banking portal. If you can't find the information, contact your financial institution.</p>
+	   <p>You will need to <a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit/help-centre.html#a1a">find your banking information</a> at the bottom of your personal cheques or in your online banking portal. If you can't find the information, contact your bank or credit union.</p>
 
 	   
 	 <!--  <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>-->
